<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="description_post_retry">Press to try and upload again</string>
    <string name="new_posts_refresh">New posts</string>
    <string name="clear">Clear</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="error_image_load">Error: couldn\'t load image</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_sign_in">Enter login and password</string>
    <string name="error_sign_in">Error occurred: no connection or wrong password</string>
    <string name="dialog_sign_in">Login required to perform operation</string>
    <string name="dialog_sign_in_yes">Sign in</string>
    <string name="dialog_sign_in_no">Not now</string>
    <string name="hint_sign_up">Enter username, login and password</string>
    <string name="hint_password_confirm">Password confirmation</string>
    <string name="name">Name</string>
</resources>